* BUG#7626 Fix the effective date check when starting a billing information endorsement
* BUG#7815 A new mandate must be created when the payer changes

Version 1.14 - 2017-11-09
* BUG#6650 Show the payer in the change bank account endorsement

Version 1.12 - 2017-04-28
* FEA#0000 Add recalculate endorsement batch

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Add Recalculate and Reinvoice Contract endorsement

Version 1.6 - 2015-12-23
* FEA#0000 Add dedicated endorsement to direct debit account modification
* FEA#0000 Allow to propagate modifications to sibling contracts

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Properly cancel and split invoices around endorsement dates

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation